# api-wrappers

csharp/: README.md  csharp.sln
csharp/roccodev-api/: HistoricalWinstreaks.cs  Monthlies.cs  Winstreaks.cs  roccodev-api.csproj
csharp/roccodev-api/http/: HttpUtils.cs
csharp/roccodev-api/json/: MonthlyProfile.cs  MonthlyProfiles.cs  WinstreakProfile.cs
csharp/roccodev-api/json/monthly/: BedMonthlyProfile.cs  BpMonthlyProfile.cs  CaiMonthlyProfile.cs  DrMonthlyProfile.cs  GntMonthlyProfiles.cs  HideMonthlyProfile.cs  PvPMonthlyProfile.cs  SkyMonthlyProfile.cs  TimvMonthlyProfile.cs
csharp/roccodev-api/json/ws/: BedWinstreaks.cs
go/src/roccodev.pw/api/: api.go
go/src/roccodev.pw/api/monthlies/: monthlies.go
go/src/roccodev.pw/api/monthlies/profile/: bed.go  cai.go  dl.go  hide.go  profile.go  pvp.go  timv.go
js/: README.md  index.js  package-lock.json  package.json
js/http/: index.js
js/struc/: histo.js  monthlies.js  streaks.js
ruby/: README.md  roccodev-api.gemspec
ruby/lib/: histo.rb  monthlies.rb  roccodev-api.rb  streaks.rb
rust/: README.md
rust/roccodev-api/: Cargo.toml  README.md
rust/roccodev-api/src/: lib.rs
rust/roccodev-api/src/http/: mod.rs
rust/roccodev-api/src/monthlies/: mod.rs
rust/roccodev-api/src/winstreaks/: mod.rs
rust/roccodev-api/src/winstreaks_historical/: mod.rs
